--- a/SMP/libcrypto.vcxproj
+++ b/SMP/libcrypto.vcxproj
@@ -1197,10 +1197,10 @@
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1281,8 +1281,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-x86.pl win32n %FLAGC% &gt;.\crypto\ecp_nistz2
 if not exist .\crypto\poly1305-x86.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86.pl win32n %FLAGC% &gt;.\crypto\poly1305-x86.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1292,8 +1292,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1325,10 +1325,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1423,8 +1423,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-avx2.pl nasm .\crypto\ecp_nistz256-avx2.asm
 if not exist .\crypto\poly1305-x86_64.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86_64.pl nasm .\crypto\poly1305-x86_64.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1434,8 +1434,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1469,10 +1469,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>5.1</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1553,8 +1553,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-x86.pl win32n %FLAGC% &gt;.\crypto\ecp_nistz2
 if not exist .\crypto\poly1305-x86.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86.pl win32n %FLAGC% &gt;.\crypto\poly1305-x86.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1564,8 +1564,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1598,10 +1598,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1696,8 +1696,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-avx2.pl nasm .\crypto\ecp_nistz256-avx2.asm
 if not exist .\crypto\poly1305-x86_64.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86_64.pl nasm .\crypto\poly1305-x86_64.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1707,8 +1707,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1751,10 +1751,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1835,8 +1835,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-x86.pl win32n %FLAGC% &gt;.\crypto\ecp_nistz2
 if not exist .\crypto\poly1305-x86.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86.pl win32n %FLAGC% &gt;.\crypto\poly1305-x86.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1846,8 +1846,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1887,10 +1887,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1971,8 +1971,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-x86.pl win32n %FLAGC% &gt;.\crypto\ecp_nistz2
 if not exist .\crypto\poly1305-x86.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86.pl win32n %FLAGC% &gt;.\crypto\poly1305-x86.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1982,8 +1982,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -2023,10 +2023,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -2121,8 +2121,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-avx2.pl nasm .\crypto\ecp_nistz256-avx2.asm
 if not exist .\crypto\poly1305-x86_64.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86_64.pl nasm .\crypto\poly1305-x86_64.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -2132,8 +2132,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -2173,10 +2173,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -2271,8 +2271,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-avx2.pl nasm .\crypto\ecp_nistz256-avx2.asm
 if not exist .\crypto\poly1305-x86_64.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86_64.pl nasm .\crypto\poly1305-x86_64.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -2282,8 +2282,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -2323,10 +2323,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>5.1</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -2407,8 +2407,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-x86.pl win32n %FLAGC% &gt;.\crypto\ecp_nistz2
 if not exist .\crypto\poly1305-x86.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86.pl win32n %FLAGC% &gt;.\crypto\poly1305-x86.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -2418,8 +2418,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -2458,10 +2458,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -2556,8 +2556,8 @@ perl ..\crypto\ec\asm\ecp_nistz256-avx2.pl nasm .\crypto\ecp_nistz256-avx2.asm
 if not exist .\crypto\poly1305-x86_64.asm (
 perl ..\crypto\poly1305\asm\poly1305-x86_64.pl nasm .\crypto\poly1305-x86_64.asm
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -2567,8 +2567,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
