--- a/SMP/libssl.vcxproj
+++ b/SMP/libssl.vcxproj
@@ -465,10 +465,10 @@
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -476,8 +476,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -487,8 +487,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -518,10 +518,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -529,8 +529,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -540,8 +540,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -573,10 +573,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>5.1</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -584,8 +584,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -595,8 +595,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -628,10 +628,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>5.1</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -639,8 +639,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -650,8 +650,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -682,10 +682,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -693,8 +693,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -704,8 +704,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -736,10 +736,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -747,8 +747,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -758,8 +758,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -800,10 +800,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -811,8 +811,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -822,8 +822,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -864,10 +864,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -875,8 +875,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -886,8 +886,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -928,10 +928,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -939,8 +939,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -950,8 +950,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -992,10 +992,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <AdditionalOptions>/IGNORE:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1003,8 +1003,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1014,8 +1014,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1055,10 +1055,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>5.1</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1066,8 +1066,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1077,8 +1077,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1118,10 +1118,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>5.1</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1129,8 +1129,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1140,8 +1140,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1180,10 +1180,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1191,8 +1191,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1202,8 +1202,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
@@ -1242,10 +1242,10 @@ del /f /q $(OutDir)\licenses\openssl.txt
       <MinimumRequiredVersion>6.0</MinimumRequiredVersion>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir $(OutDir)\include
-mkdir $(OutDir)\include\openssl
-copy ..\include\openssl\*.h $(OutDir)\include\openssl
-copy .\openssl\opensslconf.h $(OutDir)\include\openssl
+      <Command>mkdir "$(OutDir)"\include
+mkdir "$(OutDir)"\include\openssl
+copy ..\include\openssl\*.h "$(OutDir)"\include\openssl
+copy .\openssl\opensslconf.h "$(OutDir)"\include\openssl
 mkdir $(OutDir)\licenses
 copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
     </PostBuildEvent>
@@ -1253,8 +1253,8 @@ copy ..\LICENSE $(OutDir)\licenses\openssl.txt</Command>
       <Command>if exist ..\include\openssl\opensslconf.h (
 del ..\include\openssl\opensslconf.h
 )
-if exist $(OutDir)\include\openssl (
-rd /s /q $(OutDir)\include\openssl
+if exist "$(OutDir)"\include\openssl (
+rd /s /q "$(OutDir)"\include\openssl
 cd ../
 cd $(ProjectDir)
 )</Command>
@@ -1264,8 +1264,8 @@ cd $(ProjectDir)
     </CustomBuildStep>
     <CustomBuildStep>
       <Outputs>force_clean</Outputs>
-      <Command>if exist $(OutDir)\include\openssl (
-rmdir /s /q $(OutDir)\include\openssl
+      <Command>if exist "$(OutDir)"\include\openssl (
+rmdir /s /q "$(OutDir)"\include\openssl
 )
 if exist $(OutDir)\licenses\openssl.txt (
 del /f /q $(OutDir)\licenses\openssl.txt
