--- a/SMP/libssl.rc
+++ b/SMP/libssl.rc
@@ -3,8 +3,8 @@
 LANGUAGE 0x09,0x01
 
 1 VERSIONINFO
-  FILEVERSION 1,1,0,8
-  PRODUCTVERSION 1,1,0,8
+  FILEVERSION 1,1,0,9
+  PRODUCTVERSION 1,1,0,9
   FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
   FILEFLAGS 0x01L
@@ -22,11 +22,11 @@ BEGIN
             // Required:
             VALUE "CompanyName", "The OpenSSL Project, http://www.openssl.org/\0"
             VALUE "FileDescription", "OpenSSL shared library\0"
-            VALUE "FileVersion", "1.1.0h\0"
+            VALUE "FileVersion", "1.1.0i\0"
             VALUE "InternalName", "libssl\0"
             VALUE "OriginalFilename", "libssl.dll\0"
             VALUE "ProductName", "The OpenSSL Toolkit\0"
-            VALUE "ProductVersion", "1.1.0h\0"
+            VALUE "ProductVersion", "1.1.0i\0"
             // Optional:
             //VALUE "Comments", "\0"
             VALUE "LegalCopyright", "Copyright 1998-2016 The OpenSSL Authors. All rights reserved.\0"
